Added basic layout and first info to the website.

--- a/index.html
+++ b/index.html
@@ -8,10 +8,57 @@
 </head>
 <body>
     <header>
-        <h1>Welcome to My GitHub Page</h1>
+        <div class="typewriter">
+            <h1 id="header"><span class="red-code-highlight">< </span>HeCoding180 Github Page<span class="red-code-highlight"> ></span></h1>
+        </div>
     </header>
     <main>
-        <p>This is a simple website hosted on GitHub Pages.</p>
+        <div class="container">
+            <!-- Rectangles with text and logo -->
+            <section class="lang-overview-container">
+                <div class="lang-overview-box">
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/1/19/C_Logo.png" alt="Logo" class="lang-overview-box-logo">
+                    <p class="lang-overview-box-title">C</p>
+                    <div class="lang-overview-expand-content">
+                        <h2>C Useage</h2>
+                        <p>I mostly use C for embedded projects and for testing certain low level concepts.<br><br>This is my favorite language, since I enjoy to have control over the memory, as I always and am in full control of what happens. <br><br> If I need a microcontroller for an embedded project I mainly use STM32 microcontrollers (more specifically I mostly use STM32F303 series microcontrollers).</p>
+                    </div>
+                </div>
+
+                <div class="lang-overview-box">
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/b/bd/Logo_C_sharp.svg" alt="Logo" class="lang-overview-box-logo">
+                    <p class="lang-overview-box-title">C#</p>
+                    <div class="lang-overview-expand-content">
+                        <h2>C# Useage</h2>
+                        <p>Test expand text</p>
+                    </div>
+                </div>
+
+                <div class="lang-overview-box">
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/c/c3/Python-logo-notext.svg" alt="Logo" class="lang-overview-box-logo">
+                    <p class="lang-overview-box-title">Python</p>
+                    <div class="lang-overview-expand-content">
+                        <h2>Python Useage</h2>
+                        <p>Test expand text</p>
+                    </div>
+                </div>
+            </section>
+    
+            <!-- Side Panel for Programming Languages and Stats-->
+            <aside class="sidebar">
+                <div class="stat-box">
+                    <img src="https://github-readme-stats.vercel.app/api/top-langs/?username=hecoding180&theme=monokai&show_icons=true&hide_border=true&layout=compact" 
+                         alt="Top Languages" class="lang-img">
+                </div>
+                
+                <div class="stat-box">
+                    <img src="https://github-readme-stats.vercel.app/api?username=hecoding180&theme=monokai&show_icons=true&hide_border=true&count_private=true" 
+                         alt="Top Languages" class="lang-img">
+                    <img src="https://github-readme-streak-stats.herokuapp.com/?user=hecoding180&theme=monokai&hide_border=true" 
+                         alt="Top Languages" class="lang-img">
+                </div>
+            </aside>
+        </div>
     </main>
     <footer>
         <p>&copy; 2025 HeCoding180</p>
