Completed basic descriptions and project references for c, c# and python

--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
                     <div class="lang-overview-expand-content">
                         <h2>C Useage</h2>
                         <p>I mostly use C for embedded projects and for testing certain low level concepts.<br><br>This is my favorite language, since I enjoy to have control over the memory, as I always and am in full control of what happens. <br><br> If I need a microcontroller for an embedded project I mainly use STM32 microcontrollers (more specifically I mostly use STM32F303 series microcontrollers).</p>
+                        <h2>Relevant Projects</h2>
+                        <p>Here you can find some relevant C projects I've been working on:</p>
+                        <a href="https://github.com/HeCoding180/cJSON_Lib" class="project-ref-button">C JSON Parser</a>
                     </div>
                 </div>
 
@@ -30,7 +33,11 @@
                     <p class="lang-overview-box-title">C#</p>
                     <div class="lang-overview-expand-content">
                         <h2>C# Useage</h2>
-                        <p>Test expand text</p>
+                        <p>You can find me using C# any time when I need a GUI. </p>
+                        <h2>Relevant Projects</h2>
+                        <p>Here you can find some relevant C# projects I've been working on:</p>
+                        <a href="https://github.com/HeCoding180/KiCadPanelAssyFG" class="project-ref-button">KiCad Panel Assembly Files Generator Tool</a>
+                        <a href="https://github.com/HeCoding180/GraphEditor" class="project-ref-button">Image Graph Data Reader Tool</a>
                     </div>
                 </div>
 
@@ -39,7 +46,10 @@
                     <p class="lang-overview-box-title">Python</p>
                     <div class="lang-overview-expand-content">
                         <h2>Python Useage</h2>
-                        <p>Test expand text</p>
+                        <p>I don't really python except if I quickly need to create a simple tool to test something out or do some annoying tasks more quickly. I have still mentionned it here since this is the language I have started programming with.</p>
+                        <h2>Relevant Projects</h2>
+                        <p>Here you can find some relevant Python projects I've been working on:</p>
+                        <a href="https://github.com/HeCoding180/RPi_Sensehat_Pong" class="project-ref-button">Simplified Pong Game for the RaspberryPi Sensehat</a>
                     </div>
                 </div>
             </section>
