--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     <img src="https://upload.wikimedia.org/wikipedia/commons/1/19/C_Logo.png" alt="Logo" class="lang-overview-box-logo">
                     <p class="lang-overview-box-title">C</p>
                     <div class="lang-overview-expand-content">
-                        <h2>C Useage</h2>
+                        <h2>C Usage</h2>
                         <p>I mostly use C for embedded projects and for testing certain low level concepts.<br><br>This is my favorite language, since I enjoy to have control over the memory, as I always and am in full control of what happens. <br><br> If I need a microcontroller for an embedded project I mainly use STM32 microcontrollers (more specifically I mostly use STM32F303 series microcontrollers).</p>
                         <h2>Relevant Projects</h2>
                         <p>Here you can find some relevant C projects I've been working on:</p>
@@ -32,7 +32,7 @@
                     <img src="https://upload.wikimedia.org/wikipedia/commons/b/bd/Logo_C_sharp.svg" alt="Logo" class="lang-overview-box-logo">
                     <p class="lang-overview-box-title">C#</p>
                     <div class="lang-overview-expand-content">
-                        <h2>C# Useage</h2>
+                        <h2>C# Usage</h2>
                         <p>You can find me using C# any time when I need a GUI. </p>
                         <h2>Relevant Projects</h2>
                         <p>Here you can find some relevant C# projects I've been working on:</p>
@@ -45,7 +45,7 @@
                     <img src="https://upload.wikimedia.org/wikipedia/commons/c/c3/Python-logo-notext.svg" alt="Logo" class="lang-overview-box-logo">
                     <p class="lang-overview-box-title">Python</p>
                     <div class="lang-overview-expand-content">
-                        <h2>Python Useage</h2>
+                        <h2>Python Usage</h2>
                         <p>I don't really python except if I quickly need to create a simple tool to test something out or do some annoying tasks more quickly. I have still mentionned it here since this is the language I have started programming with.</p>
                         <h2>Relevant Projects</h2>
                         <p>Here you can find some relevant Python projects I've been working on:</p>
